tooling/nargo_cli/tests/snapshots/execution_success/comptime_variable_at_runtime/execute__tests__stdout.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: stdout
---
brillig(inline) fn main f0 {
  b0():
    (no terminator instruction)
}
0x01
0x02
